--- a/publications.Rmd
+++ b/publications.Rmd
@@ -2,4 +2,50 @@
 title: "Publications"
 ---
 
-Hello, World!
+#### Submitted/under review
+
+**Fuhrmeister, P.**, Elbuy, S., & Bürki, A. (under review). Assessing reliability of picture-naming measures.
+
+**Fuhrmeister, P.**, McCoach, D.B., & Myers, E.B. (under review). Individual differences in phonological skills but not categorical perception predict non-native speech sound learning.
+
+
+#### Accepted/in press
+
+**Fuhrmeister, P.**, Madec, S., Lorenz, A., Elbuy, S. & Bürki, A. (accepted). Behavioral and EEG evidence for inter-individual variability in late encoding stages of word production. *Language, Cognition, and Neuroscience.*
+
+
+#### 2022
+
+Heffner, C.C., **Fuhrmeister, P.**, Luthra, S., Mechtenberg, H., Saltzman, D., & Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. *Brain and Language, 226*(105070). https://doi.org/10.1016/j.bandl.2021.105070
+
+**Fuhrmeister, P.**, & Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. *Language, Cognition and Neuroscience, 37*(1), 63-79. DOI:10.1080/23273798.2021.1944658
+
+
+#### 2021
+
+**Fuhrmeister, P.**, & Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. *Psychonomic Bulletin & Review*. DOI:10.3758/s13423-021-02016-6
+
+**Fuhrmeister, P.** (2021). Examining group differences in between-participant variability in non-native speech sound learning. *Attention, Perception, and Psychophysics, 83*(5), 1935-1941. https://doi.org/10.3758/s13414-021-02311-3
+
+**Fuhrmeister, P**. & Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. *Brain and Language, 215*, 104919. https://doi.org/10.1016/j.bandl.2021.104919
+
+
+#### 2020
+
+**Fuhrmeister, P.**, Schlemmer, B., & Myers, E.B. (2020). Adults show initial advantages over children in learning difficult non-native speech sounds. *Journal of Speech, Language, and Hearing Research, 63*(8), 2667-2679. https://doi.org/10.1044/2020_JSLHR-19-00358
+
+**Fuhrmeister, P.**, Smith, G., & Myers, E.B. (2020). Overlearning of non-native speech sounds does not result in superior consolidation after a period of sleep. *The Journal of the Acoustical Society of America, 147*(3), EL289-294. https://doi.org/10.1121/10.0000943
+
+**Fuhrmeister, P.** & Myers, E.B. (2020). Desirable and undesirable difficulties: influences of variability, training schedule, and aptitude on non-native phonetic learning. *Attention, Perception, and Psychophysics, 82*(4), 2049-2065. https://doi.org/10.3758/s13414-019-01925-y
+
+
+#### 2019
+
+**Fuhrmeister, P.** (2019). Interference in memory consolidation of non-native speech sounds. In S. Fuchs, J. Cleland, & A. Rochet-Capellan (Eds.), *Speech Production and Perception: Learning and Memory* (pp. 207-243). Berlin: Peter Lang. https://doi.org/10.3726/b15982
+
+Luthra, S., **Fuhrmeister, P.**, Molfese, P. J., Guediche, S., Blumstein, S. E., & Myers, E. B. (2019). Brain-behavior relationships in incidental learning of non-native phonetic categories. *Brain and Language, 198*, 104692. https://doi.org/10.1016/j.bandl.2019.104692  
+
+
+#### 2017
+
+**Fuhrmeister, P.** & Myers, E. B. (2017). Non-native phonetic learning is destabilized by exposure to phonological variability before and after training. *The Journal of the Acoustical Society of America. 142*(5), EL448-EL454. https://doi.org/10.1121/1.5009688
