--- a/publications.Rmd
+++ b/publications.Rmd
@@ -18,16 +18,16 @@ title: "Publications"
 
 Heffner, C.C., **Fuhrmeister, P.**, Luthra, S., Mechtenberg, H., Saltzman, D., & Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. *Brain and Language, 226*(105070). https://doi.org/10.1016/j.bandl.2021.105070
 
-**Fuhrmeister, P.**, & Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. *Language, Cognition and Neuroscience, 37*(1), 63-79. DOI:10.1080/23273798.2021.1944658
+**Fuhrmeister, P.** & Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. *Language, Cognition and Neuroscience, 37*(1), 63-79. DOI:10.1080/23273798.2021.1944658
 
 
 #### 2021
 
-**Fuhrmeister, P.**, & Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. *Psychonomic Bulletin & Review*. DOI:10.3758/s13423-021-02016-6
+**Fuhrmeister, P.** & Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. *Psychonomic Bulletin & Review*. DOI:10.3758/s13423-021-02016-6
 
 **Fuhrmeister, P.** (2021). Examining group differences in between-participant variability in non-native speech sound learning. *Attention, Perception, and Psychophysics, 83*(5), 1935-1941. https://doi.org/10.3758/s13414-021-02311-3
 
-**Fuhrmeister, P**. & Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. *Brain and Language, 215*, 104919. https://doi.org/10.1016/j.bandl.2021.104919
+**Fuhrmeister, P.** & Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. *Brain and Language, 215*, 104919. https://doi.org/10.1016/j.bandl.2021.104919
 
 
 #### 2020
