--- a/index.Rmd
+++ b/index.Rmd
@@ -20,5 +20,5 @@ In addition to being a researcher, I am an avid runner, and I enjoy tasting good
 ---
 #### Contact
 
-pamela dot fuhrmeister at uni - potsdam dot de  
+pamela dot fuhrmeister at uni hyphen potsdam dot de  
 pamfuhrmeister at gmail dot com
