--- a/publications.Rmd
+++ b/publications.Rmd
@@ -18,25 +18,25 @@ title: "Publications"
 
 Heffner, C.C., **Fuhrmeister, P.**, Luthra, S., Mechtenberg, H., Saltzman, D., & Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. *Brain and Language, 226*(105070). https://doi.org/10.1016/j.bandl.2021.105070
 
-**Fuhrmeister, P.** & Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. *Language, Cognition and Neuroscience, 37*(1), 63-79. DOI:10.1080/23273798.2021.1944658
+**Fuhrmeister, P.** & Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. *Language, Cognition and Neuroscience, 37*(1), 63-79. DOI:10.1080/23273798.2021.1944658 <a href="Fuhrmeister_Myers_2021b.pdf" target="_blank">PDF</a>  <a href="https://osf.io/vbtxd/" target="_blank">Data/code</a>
 
 
 #### 2021
 
-**Fuhrmeister, P.** & Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. *Psychonomic Bulletin & Review*. DOI:10.3758/s13423-021-02016-6
+**Fuhrmeister, P.** & Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. *Psychonomic Bulletin & Review*. DOI:10.3758/s13423-021-02016-6 <a href="Fuhrmeister_Bürki_2021.pdf" target="_blank">PDF</a>  <a href="https://osf.io/v2fx5/" target="_blank">Data/code</a>
 
-**Fuhrmeister, P.** (2021). Examining group differences in between-participant variability in non-native speech sound learning. *Attention, Perception, and Psychophysics, 83*(5), 1935-1941. https://doi.org/10.3758/s13414-021-02311-3
+**Fuhrmeister, P.** (2021). Examining group differences in between-participant variability in non-native speech sound learning. *Attention, Perception, and Psychophysics, 83*(5), 1935-1941. https://doi.org/10.3758/s13414-021-02311-3 <a href="Fuhrmeister_2021.pdf" target="_blank">PDF</a>  <a href="https://osf.io/x4erd/" target="_blank">Data/code</a>
 
-**Fuhrmeister, P.** & Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. *Brain and Language, 215*, 104919. https://doi.org/10.1016/j.bandl.2021.104919
+**Fuhrmeister, P.** & Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. *Brain and Language, 215*, 104919. https://doi.org/10.1016/j.bandl.2021.104919 <a href="Fuhrmeister_Myers_2021a.pdf" target="_blank">PDF</a>  <a href="https://osf.io/7hak4/" target="_blank">Data/code</a>
 
 
 #### 2020
 
-**Fuhrmeister, P.**, Schlemmer, B., & Myers, E.B. (2020). Adults show initial advantages over children in learning difficult non-native speech sounds. *Journal of Speech, Language, and Hearing Research, 63*(8), 2667-2679. https://doi.org/10.1044/2020_JSLHR-19-00358
+**Fuhrmeister, P.**, Schlemmer, B., & Myers, E.B. (2020). Adults show initial advantages over children in learning difficult non-native speech sounds. *Journal of Speech, Language, and Hearing Research, 63*(8), 2667-2679. https://doi.org/10.1044/2020_JSLHR-19-00358 <a href="Fuhrmeister_Schlemmer_Myers_2020.pdf" target="_blank">PDF</a>  <a href="https://osf.io/tfmg8/" target="_blank">Data/code</a>
 
-**Fuhrmeister, P.**, Smith, G., & Myers, E.B. (2020). Overlearning of non-native speech sounds does not result in superior consolidation after a period of sleep. *The Journal of the Acoustical Society of America, 147*(3), EL289-294. https://doi.org/10.1121/10.0000943
+**Fuhrmeister, P.**, Smith, G., & Myers, E.B. (2020). Overlearning of non-native speech sounds does not result in superior consolidation after a period of sleep. *The Journal of the Acoustical Society of America, 147*(3), EL289-294. https://doi.org/10.1121/10.0000943 <a href="Fuhrmeister_Smith_Myers_2020.pdf" target="_blank">PDF</a>  <a href="https://osf.io/hm24w/" target="_blank">Data/code</a>
 
-**Fuhrmeister, P.** & Myers, E.B. (2020). Desirable and undesirable difficulties: influences of variability, training schedule, and aptitude on non-native phonetic learning. *Attention, Perception, and Psychophysics, 82*(4), 2049-2065. https://doi.org/10.3758/s13414-019-01925-y
+**Fuhrmeister, P.** & Myers, E.B. (2020). Desirable and undesirable difficulties: influences of variability, training schedule, and aptitude on non-native phonetic learning. *Attention, Perception, and Psychophysics, 82*(4), 2049-2065. https://doi.org/10.3758/s13414-019-01925-y <a href="Fuhrmeister_Myers_2020.pdf" target="_blank">PDF</a>  <a href="https://osf.io/ujm4f/" target="_blank">Data/code</a>
 
 
 #### 2019
