--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ I am interested in perceptual learning of second-language speech sounds and how 
 
 I am a big fan of open science, and I've made my data and analysis code for my recent projects publicly available at [my OSF page](https://osf.io/m5ezq/).
 
-In addition to being a researcher, I am an avid runner, and I enjoy tasting good wines, watching ZDF Krimis, and above all spending time with my husband, Garrett, and our adorable singapura cat, Maja.
+In addition to being a researcher, I am an avid runner, and I enjoy tasting good wines, watching crime shows, and above all spending time with my husband, Garrett, and our adorable singapura cat, Maja.
 
 ---
 #### Contact
