--- a/publications.Rmd
+++ b/publications.Rmd
@@ -4,9 +4,9 @@ title: "Publications"
 
 #### Submitted/under review
 
-**Fuhrmeister, P.**, Elbuy, S., & Bürki, A. (under review). Assessing reliability of picture-naming measures.
+**Fuhrmeister, P.**, Elbuy, S., & Bürki, A. (under review). Are faster participants always faster? Assessing reliability of participants’ mean response speed in picture naming.
 
-**Fuhrmeister, P.**, McCoach, D.B., & Myers, E.B. (under review). Individual differences in phonological skills but not categorical perception predict non-native speech sound learning.
+**Fuhrmeister, P.**, Phillips, M., McCoach, D.B., & Myers, E.B. (under review). Relationships between native and non-native speech perception.
 
 
 #### 2022
