--- a/publications.Rmd
+++ b/publications.Rmd
@@ -12,16 +12,15 @@ title: "Publications"
 
 #### 2022
 
-**Fuhrmeister, P.**, Madec, S., Lorenz, A., Elbuy, S. & Bürki, A. (2022). Behavioral and EEG evidence for inter-individual variability in late encoding stages of word production. *Language, Cognition, and Neuroscience.* https://doi.org/10.1080/23273798.2022.2030483 <a href="Fuhrmeister_et_al_2022.pdf" target="_blank">PDF</a>  <a href="https://osf.io/svjh5/" target="_blank">Data/code</a>
+**Fuhrmeister, P.**, Madec, S., Lorenz, A., Elbuy, S. & Bürki, A. (2022). Behavioral and EEG evidence for inter-individual variability in late encoding stages of word production. *Language, Cognition, and Neuroscience, 37*(7), 902-924. https://doi.org/10.1080/23273798.2022.2030483 <a href="Fuhrmeister_et_al_2022.pdf" target="_blank">PDF</a>  <a href="https://osf.io/svjh5/" target="_blank">Data/code</a>
 
 Heffner, C.C., **Fuhrmeister, P.**, Luthra, S., Mechtenberg, H., Saltzman, D., & Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. *Brain and Language, 226*(105070). https://doi.org/10.1016/j.bandl.2021.105070
 
 **Fuhrmeister, P.** & Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. *Language, Cognition and Neuroscience, 37*(1), 63-79. DOI:10.1080/23273798.2021.1944658 <a href="Fuhrmeister_Myers_2021b.pdf" target="_blank">PDF</a>  <a href="https://osf.io/vbtxd/" target="_blank">Data/code</a>
 
+**Fuhrmeister, P.** & Bürki, A. (2022). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. Psychonomic Bulletin & Review, 29(2), 635-647. DOI:10.3758/s13423-021-02016-6 <a href="Fuhrmeister_Bürki_2021.pdf" target="_blank">PDF</a>  <a href="https://osf.io/v2fx5/" target="_blank">Data/code</a>
 
 #### 2021
-
-**Fuhrmeister, P.** & Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. *Psychonomic Bulletin & Review*. DOI:10.3758/s13423-021-02016-6 <a href="Fuhrmeister_Bürki_2021.pdf" target="_blank">PDF</a>  <a href="https://osf.io/v2fx5/" target="_blank">Data/code</a>
 
 **Fuhrmeister, P.** (2021). Examining group differences in between-participant variability in non-native speech sound learning. *Attention, Perception, and Psychophysics, 83*(5), 1935-1941. https://doi.org/10.3758/s13414-021-02311-3 <a href="Fuhrmeister_2021.pdf" target="_blank">PDF</a>  <a href="https://osf.io/x4erd/" target="_blank">Data/code</a>
 
