--- a/publications.Rmd
+++ b/publications.Rmd
@@ -9,7 +9,8 @@ title: "Publications"
 **Fuhrmeister, P.**, Elbuy, S., & Bürki, A. (in-principle acceptance: registered report). Are faster participants always faster? Assessing reliability of participants’ mean response speed in picture naming. *Journal of Cognition.*
 
 #### 2023
-**Fuhrmeister, P.**, Phillips, M., McCoach, D.B., & Myers, E.B. (accepted). Relationships between native and non-native speech perception. *Journal of Experimental Psychology: Language, Memory, and Cognition.* https://doi.org/10.1037/xlm0001213 <a href="https://osf.io/2zg6c/" target="_blank">Data/code</a>
+
+**Fuhrmeister, P.**, Phillips, M., McCoach, D.B., & Myers, E.B. (2023). Relationships between native and non-native speech perception. *Journal of Experimental Psychology: Language, Memory, and Cognition.* https://doi.org/10.1037/xlm0001213 <a href="https://osf.io/2zg6c/" target="_blank">Data/code</a>
 
 #### 2022
 
