--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ title: "Pam Fuhrmeister"
 
 ![](fuhrmeister_recent Klein.jpeg)
 
-I am a postdoc in Prof. Dr. Audrey Bürki's lab, Cognitive Science: Language and Methods, at the University of Potsdam in Germany. My position is funded by the [Sonderforschungsbereich Limits of Variability in Language.](https://www.uni-potsdam.de/de/sfb1287/uebersicht)
+I am a postdoc in [Prof. Dr. Audrey Bürki's lab](https://audreyburki.github.io/Website/), Cognitive Science: Language and Methods, at the University of Potsdam in Germany. My position is funded by the [Sonderforschungsbereich Limits of Variability in Language.](https://www.uni-potsdam.de/de/sfb1287/uebersicht)
 
 I received my PhD in Speech, Language, and Hearing Sciences in July of 2020 from University of Connecticut in the United States. I was a member of the [Language and Brain Lab](https://myerslab.uconn.edu) under the direction of Dr. Emily Myers, who was my primary advisor.
 
