--- a/publications.Rmd
+++ b/publications.Rmd
@@ -6,6 +6,8 @@ title: "Publications"
 
 #### Accepted/in press
 
+Myers, E.B. & **Fuhrmeister, P.** (in press). The neurolinguistics of L2 phonology: A view of phonemic contrast learning. In K. Morgan-Short, & J.G. van Hell (Eds.), *Routledge Handbook of Second Language Acquisition and Neurolinguistics.*
+
 **Fuhrmeister, P.**, Elbuy, S., & Bürki, A. (in-principle acceptance: registered report). Are faster participants always faster? Assessing reliability of participants’ mean response speed in picture naming. *Journal of Cognition.*
 
 #### 2023
