--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ I am interested in perceptual learning of second-language speech sounds and how 
 
 I am a big fan of open science, and I've made my data and analysis code for my recent projects publicly available on [my OSF page](https://osf.io/m5ezq/) and [my Github](https://github.com/pamfuhrmeister).
 
-In addition to being a researcher, I am an avid runner, and I enjoy tasting good wines, watching crime shows, and above all spending time with my husband, Garrett, and our tiny singapura cat, Maja.
+In my free time, I can be found running, knitting, or watching crime shows or stand-up comedy. I also have an extremely cute and tiny cat. 
 
 ---
 #### Contact
