--- a/index.Rmd
+++ b/index.Rmd
@@ -2,22 +2,27 @@
 title: "Pam Fuhrmeister"
 ---
 
-![](fuhrmeister_recent Klein.jpeg)
+![](pam_photo.png)
 
-I am a postdoc in [Prof. Dr. Audrey Bürki's lab](https://audreyburki.github.io/Website/), Cognitive Science: Language and Methods, at the University of Potsdam in Germany. My position is funded by the [Sonderforschungsbereich Limits of Variability in Language.](https://www.uni-potsdam.de/de/sfb1287/uebersicht)
+I am a data analyst with over a decade of experience in analyzing many different types of data sets in both industry and scientific research contexts. I got a PhD in languages sciences in 2020, and once I left academia and started working in industry again, I was really (pleasantly) surprised at how similar my work was in the two contexts. In industry, we typically want to use data to understand customer behavior to make better business decisions, and in research, we want to use data to understand people's behavior or responses to some type of input, usually so we can help a specific population of people. In any case, I've used a lot of the same skills in both contexts: thinking through problems in a logical way, rigorous data/statistical analyses, and then communicating what we've learned through the data in an accessible way. Even though I'm no longer a researcher, I still have my publications listed on my website because I'm proud of that work. Plus, they contain some fun statistical analyses and data visualizations. :)  
 
-I received my PhD in Speech, Language, and Hearing Sciences in July of 2020 from University of Connecticut in the United States. I was a member of the [Language and Brain Lab](https://myerslab.uconn.edu) under the direction of Dr. Emily Myers, who was my primary advisor.
+I have several tools in my toolkit: For data visualization, statistical analyses, or communicating results, I prefer using R (particularly the tidyverse, lme4, and brms packages). For building automated reports or data pipelines, I typically use Python and SQL. For natural language processing and machine learning models, I like to use Python (pandas, spacy, scikit-learn).  
+
+<!-- I am a postdoc in [Prof. Dr. Audrey Bürki's lab](https://audreyburki.github.io/Website/), Cognitive Science: Language and Methods, at the University of Potsdam in Germany. My position is funded by the [Sonderforschungsbereich Limits of Variability in Language.](https://www.uni-potsdam.de/de/sfb1287/uebersicht) -->
+
+<!-- I received my PhD in Speech, Language, and Hearing Sciences in July of 2020 from University of Connecticut in the United States. I was a member of the [Language and Brain Lab](https://myerslab.uconn.edu) under the direction of Dr. Emily Myers, who was my primary advisor. -->
 
 <!-- Broadly, I'm interested in how we speak and how we understand other people when they speak. Everyday conversations usually feel pretty effortless, so we may not notice all the work our brains are doing to allow us to speak and comprehend what others are saying. However, speaking and listening are actually complex processes, and we still have a lot to learn about how they work. -->
 
-I am interested in perceptual learning of second-language speech sounds and how phonetic variability in the speech signal can affect learning and memory for those sounds. My work also seeks to better understand individual differences in speech perception, perceptual learning of speech, and speech production. So far I have gone about this by testing whether language ability, cognitive skills, or individual variation in brain structure (using MRI) predict individual differences in performance on various speech tasks.
+<!-- I am interested in perceptual learning of second-language speech sounds and how phonetic variability in the speech signal can affect learning and memory for those sounds. My work also seeks to better understand individual differences in speech perception, perceptual learning of speech, and speech production. So far I have gone about this by testing whether language ability, cognitive skills, or individual variation in brain structure (using MRI) predict individual differences in performance on various speech tasks. -->
 
-I am a big fan of open science, and I've made my data and analysis code for my recent projects publicly available on [my OSF page](https://osf.io/m5ezq/) and [my Github](https://github.com/pamfuhrmeister).
+<!-- I am a big fan of open science, and I've made my data and analysis code for my recent projects publicly available on [my OSF page](https://osf.io/m5ezq/) and [my Github](https://github.com/pamfuhrmeister). -->
 
-In my free time, I can be found running, knitting, or watching crime shows or stand-up comedy. I also have an extremely cute and tiny cat. 
+In my free time, I like running, knitting, drinking good coffee, and going to stand-up comedy shows. I also have an extremely cute and tiny cat! 
 
 ---
 #### Contact
 
-pamela dot fuhrmeister at uni hyphen potsdam dot de  
-pamfuhrmeister at gmail dot com
+pamfuhrmeister [at] gmail [dot] com   
+[LinkedIn](https://www.linkedin.com/in/pamela-fuhrmeister/)   
+[Github](https://github.com/pamfuhrmeister)   
