--- a/projects.Rmd
+++ b/projects.Rmd
@@ -26,6 +26,14 @@ output: html_document
 
 <!-- </div> -->
 
+<div style="display:flex; flex-wrap:wrap; gap:20px;">
+
+<div style="width:200px; text-align:center;">
+<a href="projects/maja_up.html" target="_blank">
+<img src="projects/maja_up.png" style="width:200px; height:150px; object-fit:cover; border-radius:5px;">
+<p>Does my cat understand the word "up"?</p>
+</a>
+</div>
 
 <div style="display:flex; flex-wrap:wrap; gap:20px;">
 
